finished using named route helpers instead of raw urls

--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -12,13 +12,13 @@
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>/edit">
+        <a href="<%= edit_movie_path(@the_movie) %>">
           Edit movie
         </a>
       </div>
 
       <div>
-        <a href="/movies/<%= @the_movie.id %>" data-method="delete">
+        <a href="<%= movie_path(@the_movie) %>" data-method="delete">
           Delete movie
         </a>
       </div>
