Added link_to's betweeen movies and direcors

--- a/app/views/directors/index.html.erb
+++ b/app/views/directors/index.html.erb
@@ -5,6 +5,10 @@
 <hr>
 
 <div>
+  <%= link_to "Looking for movies?", movies_path%>
+</div>
+
+<div>
   <%= link_to "Add a new director", new_director_path%>
 </div>
 
