--- a/app/views/movies/index.html.erb
+++ b/app/views/movies/index.html.erb
@@ -5,6 +5,10 @@
 <hr>
 
 <div>
+  <%= link_to "Looking for the Directors?", directors_path%>
+</div>
+
+<div>
   <%= link_to "Add a new movie", new_movie_path%>
 </div>
 
